@@ -316,13 +316,15 @@ function call(app, env, callback) {
   }
 
   function handleResponse(status, headers, body) {
-    if (utils.isEmptyBodyStatus(status)) { // needs to come before Content-Length check
-      body = '';
-    }
-    if (typeof body !== 'string' && !headers['Content-Length']) {
+    var isEmptyBody = utils.isEmptyBodyStatus(status);
+
+    // Automatically set Transfer-Encoding header for non-empty stream bodies.
+    if (!isEmptyBody && typeof body !== 'string' && !headers['Content-Length']) {
       headers['Transfer-Encoding'] = 'chunked';
     }
-    if (env.requestMethod === 'HEAD') { // set body for HEAD after Transfer-Encoding check
+
+    // HEAD requests should always return an empty body.
+    if (env.requestMethod === 'HEAD') {
       body = '';
     }
 
