@@ -1,3 +1,8 @@
+= HEAD
+
+  * HEAD requests always have the Transfer-Encoding header set the same as the
+    equivalent GET (thanks @jeffbski)
+
 = 0.19.1 / 2012-11-10
 
   * HEAD requests now preserve the value of the Content-Length header (thanks
